--- a/src/app/rbac/rbac.component.html
+++ b/src/app/rbac/rbac.component.html
@@ -1,32 +1,36 @@
 <mat-grid-list [cols]="4" rowHeight="fit" class="rbac-panel">
     <mat-grid-tile>
         <mat-grid-tile-header class="rbac-header">
-            <!-- //TODO Filter box*/ on each select-->
             <mat-form-field>
-                <mat-select placeholder="Subjects" [multiple]="true" [(value)]="selectedSubjects" (valueChange)="calculateVisibleObjects()" disableOptionCentering="true">
-                    <ngx-mat-select-search placeholderLabel="Filter" noEntriesFoundLabel="No matches found" [formControl]="subjectFilterCtrl">
+                <mat-select placeholder="Subjects" [multiple]="true" [(value)]="selectedSubjects"
+                            (valueChange)="calculateVisibleObjects()" [disableOptionCentering]="true">
+                    <ngx-mat-select-search placeholderLabel="Filter" noEntriesFoundLabel="No matches found"
+                                           [formControl]="subjectFilterCtrl">
                     </ngx-mat-select-search>
                     <mat-optgroup label="User">
-                        <mat-option *ngFor="let s of filteredUsers | async" [value]="s">
+                        <mat-option *ngFor="let s of selectFilteredUsers | async" [value]="s">
                         {{s.name}}
                         </mat-option>
                     </mat-optgroup>
                     <mat-optgroup label="Groups">
-                        <mat-option *ngFor="let s of filteredGroups | async " [value]="s">
+                        <mat-option *ngFor="let s of selectFilteredGroups | async " [value]="s">
                         {{s.name}}
                         </mat-option>
                     </mat-optgroup>
                     <mat-optgroup label="ServiceAccounts">
-                        <mat-option *ngFor="let s of filteredServiceAccounts | async" [value]="s">
+                        <mat-option *ngFor="let s of selectFilteredServiceAccounts | async" [value]="s">
                         {{s.name}}
                         </mat-option>
                     </mat-optgroup>
                 </mat-select>
             </mat-form-field>
+            <button mat-icon-button (click)="resetSubjectFilter()">
+                <mat-icon aria-label="Reset">clear</mat-icon>
+            </button>
         </mat-grid-tile-header>
 
         <mat-accordion [multi]="true" class="subjects-panel">
-            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="user.length>0"
+            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="visibleUsers.length>0"
                                  class="subjects-expansion-panel">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -38,7 +42,7 @@
                 </mat-expansion-panel-header>
                 <mat-action-row>
                     <mat-list class="subjects-list">
-                        <mat-list-item *ngFor="let subject of user; last as last">
+                        <mat-list-item *ngFor="let subject of visibleUsers; last as last">
                         {{subject.name}}
                             <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
                         </mat-list-item>
@@ -46,7 +50,7 @@
                 </mat-action-row>
             </mat-expansion-panel>
 
-            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="groups.length>0"
+            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="visibleGroups.length>0"
                                  class="subjects-expansion-panel">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -58,7 +62,7 @@
                 </mat-expansion-panel-header>
                 <mat-action-row>
                     <mat-list class="subjects-list">
-                        <mat-list-item *ngFor="let subject of groups; last as last">
+                        <mat-list-item *ngFor="let subject of visibleGroups; last as last">
                         {{subject.name}}
                             <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
                         </mat-list-item>
@@ -66,7 +70,7 @@
                 </mat-action-row>
             </mat-expansion-panel>
 
-            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="serviceAccounts.length>0"
+            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="visibleServiceAccounts.length>0"
                                  class="subjects-expansion-panel">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -78,7 +82,7 @@
                 </mat-expansion-panel-header>
                 <mat-action-row>
                     <mat-list class="subjects-list">
-                        <mat-list-item *ngFor="let subject of serviceAccounts; last as last">
+                        <mat-list-item *ngFor="let subject of visibleServiceAccounts; last as last">
                         {{subject.namespace}}:{{subject.name}}
                             <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
                         </mat-list-item>
@@ -90,55 +94,65 @@
     </mat-grid-tile>
     <mat-grid-tile>
         <mat-grid-tile-header class="rbac-header">
-            <mat-select placeholder="Scopes" [multiple]="true" [(value)]="selectedScopes"
-                        (valueChange)="calculateVisibleObjects()">
-                <mat-optgroup label="Namespace">
-                    <mat-option *ngFor="let n of selectScopes.get('Namespace')" [value]="n">
-                    {{n}}
-                    </mat-option>
-                </mat-optgroup>
-                <mat-optgroup label="Cluster-wide">
-                    <mat-option>
-                        Cluster-wide
-                    </mat-option>
-                </mat-optgroup>
-            </mat-select>
+            <mat-form-field>
+                <mat-select placeholder="RoleBindings" [multiple]="true" [(value)]="selectedRoleBindings"
+                            (valueChange)="calculateVisibleObjects()" [disableOptionCentering]="true">
+                    <ngx-mat-select-search placeholderLabel="Filter" noEntriesFoundLabel="No matches found"
+                                           [formControl]="roleBindingFilterCtrl">
+                    </ngx-mat-select-search>
+                    <mat-optgroup label="RoleBindings">
+                        <mat-option *ngFor="let n of selectFilteredRoleBindings | async" [value]="n">
+                        {{n.name}}
+                        </mat-option>
+                    </mat-optgroup>
+                    <mat-optgroup label="ClusterRoleBinding">
+                        <mat-option *ngFor="let n of selectFilteredClusterRoleBindings | async" [value]="n">
+                        {{n.name}}
+                        </mat-option>
+                    </mat-optgroup>
+                </mat-select>
+            </mat-form-field>
+            <button mat-icon-button (click)="resetRoleBindingFilter()">
+                <mat-icon aria-label="Reset">clear</mat-icon>
+            </button>
         </mat-grid-tile-header>
 
-        <mat-accordion [multi]="true" class="scopes-panel">
-            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="clusterWide"
-                                 class="scopes-expansion-panel">
+
+        <mat-accordion [multi]="true" class="rolebindings-panel">
+            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="visibleClusterRoleBindings.length>0"
+                                 class="rolebindings-expansion-panel">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
-                        Cluster-wide
+                        ClusterRoleBindings
                     </mat-panel-title>
-                    <mat-panel-description class="scopes-icon">
+                    <mat-panel-description class="rolebindings-icon">
                         <mat-icon>fullscreen</mat-icon>
                     </mat-panel-description>
                 </mat-expansion-panel-header>
                 <mat-action-row>
-                    <mat-list class="scopes-list">
-                        <mat-list-item>
-                            Cluster-wide
+                    <mat-list class="rolebindings-list">
+                        <mat-list-item *ngFor="let cr of visibleClusterRoleBindings; last as last">
+                        {{cr.name}}
+                            <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
                         </mat-list-item>
                     </mat-list>
                 </mat-action-row>
             </mat-expansion-panel>
 
-            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="namespaces.length>0"
-                                 class="scopes-expansion-panel">
+            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="visibleRoleBindings.length>0"
+                                 class="rolebindings-expansion-panel">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
-                        Namespace
+                        RoleBindings
                     </mat-panel-title>
-                    <mat-panel-description class="scopes-icon">
+                    <mat-panel-description class="rolebindings-icon">
                         <mat-icon>fullscreen_exit</mat-icon>
                     </mat-panel-description>
                 </mat-expansion-panel-header>
                 <mat-action-row>
-                    <mat-list class="scopes-list">
-                        <mat-list-item *ngFor="let n of namespaces; last as last">
-                        {{n}}
+                    <mat-list class="rolebindings-list">
+                        <mat-list-item *ngFor="let r of visibleRoleBindings; last as last">
+                        {{r.namespace}}:{{r.name}}
                             <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
                         </mat-list-item>
                     </mat-list>
@@ -148,23 +162,31 @@
     </mat-grid-tile>
     <mat-grid-tile>
         <mat-grid-tile-header class="rbac-header">
-            <mat-select placeholder="Roles" [multiple]="true" [(value)]="selectedRoles"
-                        (valueChange)="calculateVisibleObjects()">
-                <mat-optgroup label="Roles">
-                    <mat-option *ngFor="let r of selectRoles.get('Role')" [value]="r">
-                    {{r.name}}
-                    </mat-option>
-                </mat-optgroup>
-                <mat-optgroup label="ClusterRoles">
-                    <mat-option *ngFor="let cr of selectRoles.get('ClusterRole')" [value]="cr">
-                    {{cr.name}}
-                    </mat-option>
-                </mat-optgroup>
-            </mat-select>
+            <mat-form-field>
+                <mat-select placeholder="Roles" [multiple]="true" [(value)]="selectedRoles"
+                            (valueChange)="calculateVisibleObjects()" [disableOptionCentering]="true">
+                    <ngx-mat-select-search placeholderLabel="Filter" noEntriesFoundLabel="No matches found"
+                                           [formControl]="roleFilterCtrl">
+                    </ngx-mat-select-search>
+                    <mat-optgroup label="Roles">
+                        <mat-option *ngFor="let r of selectFilteredRoles | async" [value]="r">
+                        {{r.name}}
+                        </mat-option>
+                    </mat-optgroup>
+                    <mat-optgroup label="ClusterRoles">
+                        <mat-option *ngFor="let cr of selectFilteredClusterRoles | async" [value]="cr">
+                        {{cr.name}}
+                        </mat-option>
+                    </mat-optgroup>
+                </mat-select>
+            </mat-form-field>
+            <button mat-icon-button (click)="resetRoleFilter()">
+                <mat-icon aria-label="Reset">clear</mat-icon>
+            </button>
         </mat-grid-tile-header>
 
         <mat-accordion [multi]="true" class="roles-panel">
-            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="clusterRoles.length>0"
+            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="visibleClusterRoles.length>0"
                                  class="roles-expansion-panel">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -176,7 +198,7 @@
                 </mat-expansion-panel-header>
                 <mat-action-row>
                     <mat-list class="roles-list">
-                        <mat-list-item *ngFor="let cr of clusterRoles; last as last">
+                        <mat-list-item *ngFor="let cr of visibleClusterRoles; last as last">
                         {{cr.name}}
                             <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
                         </mat-list-item>
@@ -184,7 +206,7 @@
                 </mat-action-row>
             </mat-expansion-panel>
 
-            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="roles.length>0"
+            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngIf="visibleRoles.length>0"
                                  class="roles-expansion-panel">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -196,7 +218,7 @@
                 </mat-expansion-panel-header>
                 <mat-action-row>
                     <mat-list class="roles-list">
-                        <mat-list-item *ngFor="let r of roles; last as last">
+                        <mat-list-item *ngFor="let r of visibleRoles; last as last">
                         {{r.namespace}}:{{r.name}}
                             <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
                         </mat-list-item>
@@ -207,30 +229,39 @@
     </mat-grid-tile>
     <mat-grid-tile>
         <mat-grid-tile-header class="rbac-header">
-            <mat-select placeholder="Rights" [multiple]="true">
-                <mat-optgroup *ngFor="let rg of rights" [label]="rg.scope">
-                    <mat-option *ngFor="let r of rg.rights" [value]="r">
-                    {{r}}
-                    </mat-option>
-                </mat-optgroup>
-            </mat-select>
+            <mat-form-field>
+                <mat-select placeholder="Rules" [multiple]="true" [(value)]="selectedRoleBindingRule"
+                            (valueChange)="calculateVisibleObjects()" [disableOptionCentering]="true">
+                    <ngx-mat-select-search placeholderLabel="Filter" noEntriesFoundLabel="No matches found"
+                                           [formControl]="roleBindingRuleFilterCtrl">
+                    </ngx-mat-select-search>
+                    <mat-optgroup *ngFor="let rbr of selectFilteredNamespacesRoleBindingRules | async" [label]="rbr.namespace">
+                        <mat-option *ngFor="let rr of rbr.roleRules" [value]="rr">
+                        {{rr.rule.display}}
+                        </mat-option>
+                    </mat-optgroup>
+                </mat-select>
+            </mat-form-field>
+            <button mat-icon-button (click)="resetRuleFilter()">
+                <mat-icon aria-label="Reset">clear</mat-icon>
+            </button>
         </mat-grid-tile-header>
 
-        <mat-accordion [multi]="true" class="rights-panel">
-            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngFor="let rg of rights"
-                                 class="rights-expansion-panel">
+        <mat-accordion [multi]="true" class="rules-panel">
+            <mat-expansion-panel [expanded]="true" [hideToggle]="true" *ngFor="let nrr of visibleNamespacedRoleBindingRules"
+                                 class="rules-expansion-panel">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
-                        Rights ({{rg.scope}})
+                        Rules ({{ nrr.namespace}})
                     </mat-panel-title>
-                    <mat-panel-description class="rights-icon">
+                    <mat-panel-description class="rules-icon">
                         <mat-icon>lock_open</mat-icon>
                     </mat-panel-description>
                 </mat-expansion-panel-header>
                 <mat-action-row>
-                    <mat-list class="rights-list">
-                        <mat-list-item *ngFor="let r of rg.rights; last as last">
-                        {{r}}
+                    <mat-list class="rules-list">
+                        <mat-list-item *ngFor="let rr of nrr.roleRules; last as last">
+                        {{rr.rule.display}}
                             <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
                         </mat-list-item>
                     </mat-list>
