--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -29,3 +29,11 @@ h1.app-name {
        `<body>` to be our scrolling element for mobile layouts. */
     flex: 1 0 auto;
 }
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.mat-icon {
+    font-size: 35px;
+}
